--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "nodemon": "^3.1.9",
     "react-pwa-backend": "file:"
   }
 }
