--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment-timezone": "^0.5.48",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "react-pwa-backend": "file:"
   }
